--- a/templates/isdialogmote/innkalling-arbeidstaker.hbs
+++ b/templates/isdialogmote/innkalling-arbeidstaker.hbs
@@ -55,7 +55,7 @@
             page-break-after: always;
         }
     </style>
-    <title>Oppfølgingsplan</title>
+    <title>Dialogmøte</title>
 </head>
 <body>
 <h1>Innkalling til dialogmøte</h1>
