--- a/templates/isdialogmote/avlysning-arbeidstaker.hbs
+++ b/templates/isdialogmote/avlysning-arbeidstaker.hbs
@@ -58,7 +58,7 @@
     <title>Dialogmøte</title>
 </head>
 <body>
-<h1>Innkalling til dialogmøte</h1>
+<h1>Avlysning av dialogmøte</h1>
 
 <h2>Tid og sted</h2>
 <p>{{ innkalling.tidOgSted.sted }}</p>
