--- a/templates/isdialogmote/innkalling-arbeidstaker.hbs
+++ b/templates/isdialogmote/innkalling-arbeidstaker.hbs
@@ -32,13 +32,26 @@
 
         h3 {
             margin-bottom: 0px;
-            font-size: 12px;
+            font-size: 14px;
             font-weight: bold;
         }
 
         p {
             width: 66%;
             margin-top: 0px;
+            font-family: Source Sans Pro;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 20px;
+            letter-spacing: 0.2px;
+            color: #3E3832;
+        }
+
+        a {
+            width: 66%;
+            margin-top: 0px;
+            display: block;
+            margin-bottom: 1em;
             font-family: Source Sans Pro;
             font-weight: normal;
             font-size: 14px;
@@ -59,9 +72,19 @@
 </head>
 <body>
 <h1>Innkalling til dialogmøte</h1>
-
-<h2>Tid og sted</h2>
-<p>{{ innkalling.tidOgSted.sted }}</p>
-
+{{#each .}}
+    {{#if title}}
+        <h3>{{title}}</h3>
+    {{/if}}
+    {{#if text }}
+        {{#eq type 'HEADER'}}
+            <h2>{{text}}</h2>
+        {{else eq type 'LINK'}}
+            <a href="{{text}}">{{text}}</a>
+        {{else}} <!-- eq type PARAGRAPH-->
+            <p>{{text}}</p>
+        {{/eq}}
+    {{/if}}
+{{/each}}
 </body>
 </html>
