--- a/templates/isdialogmote/avlysning-arbeidstaker.hbs
+++ b/templates/isdialogmote/avlysning-arbeidstaker.hbs
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html lang="no">
-<head>
-    <meta charset="UTF-8"/>
-    <style>
-        @page {
-            margin: 46px;
-        }
-
-        * {
-            font-family: "Source Sans Pro", SourceSansPro, Source_Sans_Pro, ArialSystem, sans-serif;
-            color: #3E3832;
-            font-style: normal;
-        }
-
-        h1, h2 {
-            font-weight: 500;
-            page-break-after: avoid;
-        }
-
-        h1 {
-            font-size: 24px;
-            line-height: 28px;
-        }
-
-        h2 {
-            border-bottom: 2px solid #99C2E8;
-            font-size: 20px;
-            line-height: 25px;
-            margin-top: 48px;
-        }
-
-        h3 {
-            margin-bottom: 0px;
-            font-size: 12px;
-            font-weight: bold;
-        }
-
-        p {
-            width: 66%;
-            margin-top: 0px;
-            font-family: Source Sans Pro;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 20px;
-            letter-spacing: 0.2px;
-            color: #3E3832;
-        }
-
-        .avoidPageBreakInside {
-            page-break-inside: avoid;
-        }
-
-        .pageBreak {
-            page-break-after: always;
-        }
-    </style>
-    <title>Dialogmøte</title>
-</head>
-<body>
-<h1>Avlysning av dialogmøte</h1>
-
-<h2>Tid og sted</h2>
-<p>{{ innkalling.tidOgSted.sted }}</p>
-
-</body>
-</html>
+{{> isdialogmote/partials/base items=this doctitle="Dialogmøte" heading="Avlysning av dialogmøte"}}
