PDF for referat

--- a/templates/isdialogmote/partials/base.hbs
+++ b/templates/isdialogmote/partials/base.hbs
@@ -49,7 +49,7 @@
         a {
             width: 66%;
             margin-top: 0px;
-            display: block;
+            display: inline;
             margin-bottom: 1em;
             font-family: Source Sans Pro;
             font-weight: normal;
@@ -83,12 +83,12 @@
         </h2>
     {{else eq type 'LINK' }}
         {{#each texts }}
-            <a href="{{ this }}">{{ this }}</a>
+            <p><a href="{{ this }}">{{ this }}</a></p>
         {{/each}}
     {{else}} <!-- eq type PARAGRAPH -->
         <p>
             {{#each texts }}
-                {{ this }}<br/>
+                {{{ this }}}<br/>
             {{/each}}
         </p>
     {{/eq}}
