--- a/templates/isdialogmote/partials/base.hbs
+++ b/templates/isdialogmote/partials/base.hbs
@@ -88,7 +88,7 @@
     {{else}} <!-- eq type PARAGRAPH -->
         <p>
             {{#each texts }}
-                {{ this }}<br/>
+                {{ breaklines this }}<br/>
             {{/each}}
         </p>
     {{/eq}}
