--- a/templates/isdialogmote/endring-tidsted.hbs
+++ b/templates/isdialogmote/endring-tidsted.hbs
@@ -1,1 +1,1 @@
-{{> isdialogmote/partials/base items=this doctitle="Dialogmøte" heading="Endring av dialogmøte"}}
+{{> isdialogmote/partials/base items=this doctitle="Dialogmøte" heading="Endret dialogmøte"}}
