--- a/templates/isdialogmote/referat.hbs
+++ b/templates/isdialogmote/referat.hbs
@@ -1,1 +1,1 @@
-{{> isdialogmote/partials/base items=this doctitle="Referat" heading="Referat fra dialogmøte"}}
+{{> isdialogmote/partials/base items=this doctitle="Referat"}}
