--- a/templates/isdialogmote/avlysning.hbs
+++ b/templates/isdialogmote/avlysning.hbs
@@ -1,1 +1,1 @@
-{{> isdialogmote/partials/base items=this doctitle="Dialogmøte" heading="Avlysning av dialogmøte"}}
+{{> isdialogmote/partials/base items=this doctitle="Dialogmøte" }}
