--- a/templates/isdialogmote/innkalling.hbs
+++ b/templates/isdialogmote/innkalling.hbs
@@ -1,1 +1,1 @@
-{{> isdialogmote/partials/base items=this doctitle="Dialogmøte" heading="Innkalling til dialogmøte"}}
+{{> isdialogmote/partials/base items=this doctitle="Dialogmøte"}}
